Revision history for WWW::Scraper::ISBN::Record
===============================================

        - added LICENSE file.

0.19    2013-08-27
        - American dates!
        - cleaned up code.
        - added new test script.

0.18    2013-08-25
        - New Maintainer: Barbie.
        - move module into lib directory structure.
        - change file dates changed to meet W3CDTF standards.
        - reworked Makefile.PL for clarity.
        - added META.json and updated META.yml.
        - extended test suite.

0.17    2004-04-06
	    - Removed exporter and perl version stuff at user request.

0.16    2004-03-30
	    - Started using Changes file.
	    - Fixed some documentation.