@@ -2,6 +2,7 @@ Revision history for WWW::Scraper::ISBN::Record
 ===============================================
 
         - added LICENSE file.
+        - added deprecation warning.
 
 0.19    2013-08-27
         - American dates!
